# xboxrecomp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: GETTING_STARTED.md
docs/formats/: disc-image.md  kernel-exports.md  xbe.md
docs/pipeline/: 01-xbe-parsing.md  02-disassembly.md  03-function-id.md  04-lifting.md  05-runtime.md  06-debugging.md
docs/runtime/: README.md
docs/technical/: candidate-games.md  d3d-translation.md  d3d8ltcg-device-context.md  gap-analysis.md  indirect-calls.md  kernel-replacement.md  lessons-learned.md  memory-layout.md  register-model.md  seh-handling.md  xemu-debugging.md
include/xbox/: xboxrecomp.h
src/: README.md
src/apu/: CMakeLists.txt  README.md  apu.h  apu_core.c  apu_debug.h  apu_dsp.c  apu_mmio_hook.c  apu_shim.h  apu_state.h  apu_vp.c  fpconv.h
src/audio/: CMakeLists.txt  README.md  dsound_device.c  dsound_xbox.h
src/d3d/: CMakeLists.txt  README.md  d3d8_combiners.c  d3d8_combiners.h  d3d8_device.c  d3d8_internal.h  d3d8_resources.c  d3d8_shaders.c  d3d8_states.c  d3d8_swizzle.h  d3d8_vsh.c  d3d8_vsh.h  d3d8_xbox.h
src/input/: CMakeLists.txt  README.md  xinput_device.c  xinput_xbox.h
src/kernel/: CMakeLists.txt  README.md  kernel.h  kernel_bridge.c  kernel_crypto.c  kernel_file.c  kernel_hal.c  kernel_io.c  kernel_memory.c  kernel_ob.c  kernel_path.c  kernel_pool.c  kernel_rtl.c  kernel_sync.c  kernel_thread.c  kernel_thunks.c  kernel_xbox.c  xbox_memory_layout.c  xbox_memory_layout.h
src/nv2a/: CMakeLists.txt  README.md  font_atlas_data.h  menu_pb_crash_select.h  menu_pb_driver_details.h  menu_pb_main_menu.h  menu_pb_race_setup.h  menu_pb_road_rage.h  menu_pb_single_event.h  menu_pb_time_attack.h  menu_pb_world_tour.h  menu_pushbuffer_data.h  nv2a_core.c  nv2a_mmio_hook.c  nv2a_mmio_hook.h  nv2a_pb_replay.c  nv2a_pb_test.c  nv2a_pgraph_d3d11.c  nv2a_pgraph_d3d11.h  nv2a_regs.h  nv2a_state.h  qemu_shim.h
templates/new-game/: .gitignore  CMakeLists.txt
templates/new-game/src/: main.c  recomp_manual.c
templates/runtime/: kernel_stubs.h  recomp_types.h  xbox_memory.h
tools/: README.md  __init__.py
tools/disasm/: __init__.py  __main__.py  cache.py  config.py  disasm.py  engine.py  functions.py  labels.py  loader.py  output.py  xrefs.py
tools/func_id/: __init__.py  __main__.py  clustering.py  config.py  crt_identifier.py  identify.py  imm_scanner.py  output.py  rw_identifier.py  stub_classifier.py  vtable_scanner.py
tools/recomp/: __init__.py  __main__.py  analyze_unresolved.py  config.py  disasm.py  lifter.py  output.py  translator.py
tools/xbe_parser/: xbe_parser.py
tools/xmv/: __init__.py  __main__.py  xmv_demux.py
